福島Project/src/objects/JFK_CheckSheetTR__c.object
<CustomObject>
    <description>JFK</description>
    <fields>
        <fullName>ActionAfterJudgement__c</fullName>
        <label>判定後のアクション</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Biko__c</fullName>
        <label>備考</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CategoryNo__c</fullName>
        <label>カテゴリNo.</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CheckKomoku__c</fullName>
        <label>チェック項目</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckNaiyo__c</fullName>
        <label>チェック内容解説</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CheckSheetName__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>審査シート名</label>
        <referenceTo>JFK_CommonM__c</referenceTo>
        <relationshipName>CheckSheetNames</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hantei_1st__c</fullName>
        <label>判定(1次担当者)</label>
        <picklist>
            <picklistValues>
                <fullName>OK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hantei_2nd__c</fullName>
        <label>判定(2次担当者)</label>
        <picklist>
            <picklistValues>
                <fullName>OK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hantei_Checkbox_1st__c</fullName>
        <defaultValue>false</defaultValue>
        <label>判定チェックボックス(1次担当者)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hantei_Checkbox_2nd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>判定チェックボックス(2次担当者)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HoseiKanryoBi__c</fullName>
        <label>補正完了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hosoku__c</fullName>
        <label>補足</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JigyosyoMei__c</fullName>
        <formula>JigyosyoTR__r.Nendo_Kai_Jigyosyo__r.Account__r.Name</formula>
        <label>事業所名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JigyosyoTR__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>事業所(支給/実績)</label>
        <referenceTo>JFK_JigyosyoTR__c</referenceTo>
        <relationshipLabel>審査シート</relationshipLabel>
        <relationshipName>JigyosyoTR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ninzu__c</fullName>
        <label>人数</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NoForShow__c</fullName>
        <label>No.</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No__c</fullName>
        <label>No.</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P_HoseiZumi_1st__c</fullName>
        <defaultValue>false</defaultValue>
        <label>P補正済(1次担当者)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P_HoseiZumi_2nd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>P補正済(2次担当者)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PasonaHoseiKa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>パソナ補正可</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RodosyaMei__c</fullName>
        <formula>RodosyaTR__r.Rodosya__r.LastName  &amp; &quot; &quot; &amp; RodosyaTR__r.Rodosya__r.FirstName</formula>
        <label>労働者名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RodosyaTR__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>労働者(支給/実績)</label>
        <referenceTo>JFK_RodoSyaTR__c</referenceTo>
        <relationshipLabel>審査シート</relationshipLabel>
        <relationshipName>RodosyaTRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SEQNo__c</fullName>
        <label>SEQNo</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShowHanteiCheckBox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>チェックシートにOK/NGボタンではなく、チェックボックスを表示する時、ON(True)</description>
        <label>判定用チェックボックス表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShowTextBox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>テキストボックス表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zokusei__c</fullName>
        <label>属性</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>審査シート</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>JigyosyoTR__c</columns>
        <columns>RodosyaTR__c</columns>
        <columns>CategoryNo__c</columns>
        <columns>No__c</columns>
        <columns>SEQNo__c</columns>
        <columns>CheckKomoku__c</columns>
        <columns>CheckNaiyo__c</columns>
        <columns>P_HoseiZumi_1st__c</columns>
        <columns>Hantei_1st__c</columns>
        <columns>P_HoseiZumi_2nd__c</columns>
        <columns>Hantei_2nd__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>チェックシート名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>